Make sure we can handle very large sheets.
This is not the most elegant way to structure the code. Basically,
the DOM can't handle us creating a div that's millions of pixels
wide, and then offsetting it negatively to show a small window of it.

Instead, we need to carefully show smaller windows of the space we're
rendering so that the widths and offsets are not "too large" (for some
roundoff error that's not totally clear).

A better model than what I have here would be to formally define
the different view regions, and calculate everything relative to their
pixel offsets, along with explicit clipping regions.

But, this seems to work so we can refine it when we find a more subtle
bug.

--- a/object_database/web/content/app.css
+++ b/object_database/web/content/app.css
@@ -1014,10 +1014,10 @@ pre {
 .sheet-currently-selected-contents {
     position: absolute;
     font-family: Monaco, Menlo, "Ubuntu Mono", Consolas, source-code-pro, monospace;
+    line-height: 120%;
     white-space: pre-wrap;
     padding-top: 4px;
     padding-left: 4px;
-    padding-bottom: 4px;
     z-index: 1;
     overflow: hidden;
 
